--- a/examples/views/arm.xml
+++ b/examples/views/arm.xml
@@ -6,7 +6,6 @@
   <properties class="hudson.model.View$PropertyList"/>
   <jobNames>
     <comparator class="hudson.util.CaseInsensitiveComparator"/>
-    <string>arm-build-step</string>
   </jobNames>
   <jobFilters/>
   <columns>
@@ -19,5 +18,6 @@
     <hudson.views.BuildButtonColumn/>
     <hudson.plugins.favorite.column.FavoriteColumn plugin="favorite@2.3.2"/>
   </columns>
+  <includeRegex>^arm-.*</includeRegex>
   <recurse>false</recurse>
 </hudson.model.ListView>
