--- a/examples/views/wrapper.xml
+++ b/examples/views/wrapper.xml
@@ -6,8 +6,6 @@
   <properties class="hudson.model.View$PropertyList"/>
   <jobNames>
     <comparator class="hudson.util.CaseInsensitiveComparator"/>
-    <string>cloudify-wrapper-with-git</string>
-    <string>cloudify-wrapper-with-url</string>
   </jobNames>
   <jobFilters/>
   <columns>
@@ -20,5 +18,6 @@
     <hudson.views.BuildButtonColumn/>
     <hudson.plugins.favorite.column.FavoriteColumn plugin="favorite@2.3.2"/>
   </columns>
+  <includeRegex>^cloudify-wrapper-.*</includeRegex>
   <recurse>false</recurse>
 </hudson.model.ListView>
